2012-01-07    <Jim@LS-RED>

	* CPU/data.c (increment_data_pc), inst.c, tt.core.s [Artur Golisz <artur_waw@ymail.com>]:
	Did not grow data segments properly when allocating memory with
	the .space command.

2012-01-02    <Jim@X64PC>

	* CPU/spim-utils.c (write_startup_message):
	Updated copyright date.

2012-01-02    <Jim@LS-RED>

	* CPU/version.h:
	Version 9.1.5

	* Setup/qtspim_debian_deployment/control.prototype:
	More precise dependencies for qt packages >= 4.7 to fix setup problems.


2011-12-03    <Jim@LS-RED>

	* QtSpim/main.cpp (parseCommandLine): [Esteban Stafford (estebanstafford)]:
	Did not correctly initialize memory with -file argument.

	* QtSpim/menu.cpp, console.cpp, console.h [Esteban Stafford (estebanstafford)]:
	Got in an infinite loop when single stepping or running
	interpreter blocked waiting for input.

2011-09-04    <Jim@X64PC>

	* CPU/version.h (SPIM_VERSION):
	Version 9.1.4

2011-11-25    <Jim@LS-RED>

	* spim/Makefile [W. Michael Petullo ( flyn )]:
	Inherit flags from environment.

2011-08-14    <Jim@LS-RED>

	* QtSpim/console.cpp, QtSpim/datawin.cpp, QtSpim/regwin.cpp, QtSpim/textwin.cpp [Jordan Thoms (jords12)]:
	Subwindows can receive events before main window is fully
	construct if subwindows are undocked, which lead to a null-pointer reference.

	* spim/spim.c (write_assembled_code) [George Prekas (prekgeo)]:
	Added command line argument to dump contents of text and data segments.

	* spim/spim.c:
	Clean up code for dumping text segment and comments.

2011-07-30    <Jim@LS-RED>

	* QtSpim/help/HP_AppA.html [Tatpong Katanyukul <tatpong@gmail.com>]:
	Minor typos in instruction descriptions (bgezal, div.d, sub.d).

2011-07-26    <Jim@LS-RED>

	* spim/Makefile [flyn]:
	Added $(DESTDIR) to spim/xspim install targets.

2011-07-24  Jim Larus  <jim@linuxPC>

	* Version 9.1.3

	* bin/release-debian:
	Parameterize for x64 linux.

2011-07-23  Jim Larus  <jim@linux64>

	* xspim/buttons.c:
	Changes to satisfy C++'s stricter typing rules.
